# fs-coding-assessment

./: ARCHITECTURE.md  README.md  compose.yaml
backend/: Dockerfile  README.md  compose.yaml  pyproject.toml
backend/alembic/versions/: 9f2b3a4c5d6e_add_todo_user_id.py
backend/app/: main.py
backend/app/dependencies/: todo.py
backend/app/models/: todo.py
backend/app/repositories/: todo_repository.py
backend/app/routers/: todos.py
backend/app/schemas/: todo.py
backend/app/services/: todo_service.py
backend/backend/: verify_db.py
backend/frontend/: Dockerfile
backend/tests/: conftest.py  test_todo_api.db  test_todos.py
frontend/: README.md  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: confirm-modal.tsx  error-boundary.tsx  header.tsx  pagination-controls.tsx  protected-route.tsx  todo-filters.tsx  todo-form-modal.tsx  todo-list.tsx  todo-results.tsx
frontend/src/context/: auth-context.tsx  toast-context.tsx  todo-context.tsx
frontend/src/lib/: api.ts  auth.test.ts  auth.ts  types.ts  validators.ts
